--- a/dashboard.html
+++ b/dashboard.html
@@ -35,7 +35,7 @@
                     <a href="#" class="nav-link text-black" onclick="showSection('emergency')">Emergency Diagnoses</a>
                 </li>
                 <li class="nav-item">
-                    <a href="second.html" class="nav-link text-black">Logout</a>
+                    <a href="index.html" class="nav-link text-black">Logout</a>
                 </li>
             </ul>
         </nav>
